Compucom CCQA Org 100919/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Id__c</fullName>
        <formula>Opportunity.Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCST_Account_Id__c</fullName>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCST Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Revenue_Types__c</fullName>
        <label>FCST Revenue Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Auto_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fcst Auto Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Factor__c</fullName>
        <label>Risk Factor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>